--- a/styles.css
+++ b/styles.css
@@ -9,18 +9,66 @@
   --ts-color: #ff7979;
   --promo-button-color: #5e54a4;
   --form-border-curser-color:#5e54a4;
+  --alt-form-border-color:#ff7979;
   --form-button-color: #38CC8B;
   --main-text-color: #FFFFFF;
-  --form-text-active-color:#3D3B48;
+  --form-text-color:#3D3B48;
   --agreement-text-color:#BAB7D4;
 
+  /*typography*/
+  --font-family: "Poppins", sans-serif;
+  --h1-text-size: 3.125rem;
+  --h1-weight: 700;
+  --h1-line-height: 3.438em;
+  --par-text-size:1em;
+  --par-weight: 500;
+  --par-line-height: 1.625em;
+  --letter-spacing: 0.063em;
+
+  /*mobile spacing*/
+  --m-spacing-s:.5em;
+  --m-spacing-m:1em;
+  --m-spacing-l:1.5em;
+  --m-spacing-xl:4em;
+
+  /*desktop spacing*/
+  --d-spacing-xs: .5em;
+  --d-spacing-s: .688em;
+  --d-spacing-m: 1.25em;
+  --d-spacing-l:1.5em;
+  --d-spacing-xl: 2.5em;
+  --d-spacing-xxl: 2.813em;
 }
+
+
+
 
 .attribution {
   font-size: 11px;
   text-align: center;
+  font-family: var(--font-family);
+
 }
 .attribution a {
+
   color: var(--form-text-color);
 }
 
+/*NOTES FOR HAZEL DONT DELETE UNTIL PROJECT IS COMPLETE*/
+/*mobile spacing
+64-xl
+24-l
+16-m
+8-s
+*/
+
+
+/*
+desktop spacing
+45-xxl
+40-xl
+24-l
+20-m
+11-s
+8-xs
+*/
